spade-tests/src/snapshots/spade_tests__data_requirements__if_statements_require_data.snap
---
source: spade-tests/src/data_requirements.rs
---
fn test(sel: bool, x: clock, y: clock) -> clock {
    if sel {
        x
    } else {
        y
    }
}


error: Trait bound not satisfied. clock does not implement core::marker::Data
  ┌─ testinput:2:12
  │      
2 │     ╭     if sel {
  │ ╭────────────────^
  │ │ ╭──────────────'
3 │ │ │ │         x
4 │ │ │ │     } else {
  │ ╰─│─│─────^ clock does not implement core::marker::Data
  │   ╰─│─────' Required because of the trait bound specified here
5 │     │         y
6 │     │     }
  │     ╰─────' The result of an if-expression must be Data.
  │      
  = help: An expression not being `Data` typically means it contains at least one `clock` type
  = help: You can learn more about `Data` here: https://docs.spade-lang.org/wires.html
