spade-tests/src/snapshots/spade_tests__data_requirements__inv_data_can_be_captured.snap
---
source: spade-tests/src/data_requirements.rs
---
entity test(clk: clock) {
    let x: inv bool = port.1;

    let lambda = entity |clk| {
        set x = false;
    };

    lambda.inst call(clk, ());
}
