spade-tests/src/snapshots/spade_tests__data_requirements__pipeline_binding_requires_copy.snap
---
source: spade-tests/src/data_requirements.rs
---
pipeline(0) test(clk: clock) {
    let r = port();
}


error: Trait bound not satisfied. (_, inv _) does not implement core::marker::Copy
  ┌─ testinput:2:9
  │    
1 │     pipeline(0) test(clk: clock) {
  │ ╭────────────────────────────────'
  │ │ ╭──────────────────────────────'
2 │ │ │     let r = port();
  │ │ │         ^
  │ │ │         │
  │ │ │         (_, inv _) does not implement core::marker::Copy
  │ │ │         The type of this expression is not `Data + Copy` which means it cannot be stored in a register.
3 │ │ │ }
  │ ╰─│─' Required because of the trait bound specified here
  │   ╰─' The value needs to be in a register because it is in this pipeline
  │    
  = help: An expression not being `Data + Copy` typically means it contains at least one `inv` type
  = help: You can learn more about `Data` and `Copy` here: https://docs.spade-lang.org/wires.html
  = Consider making the binding a wire
  │
2 │     let wire r = port();
  │         +++++
