spade-tests/src/snapshots/spade_tests__data_requirements__reg_requires_copy.snap
---
source: spade-tests/src/data_requirements.rs
---
entity test(clk: clock) {
    reg(clk) r = port();
}


error: Trait bound not satisfied. (_, inv _) does not implement core::marker::Copy
  ┌─ testinput:2:14
  │
2 │     reg(clk) r = port();
  │     ---      ^   ------ The type of this expression is not `Data + Copy` which means it cannot be stored in a register.
  │     │        │    
  │     │        (_, inv _) does not implement core::marker::Copy
  │     Required because of the trait bound specified here
  │
  = help: An expression not being `Data + Copy` means it contains at least one `inv` or `clock` type
  = help: You can learn more about `Data` here: https://docs.spade-lang.org/wires.html
